Fixed layout issue in hub

--- a/modules/util/src/main/resources/css/design.css
+++ b/modules/util/src/main/resources/css/design.css
@@ -107,10 +107,6 @@ body {
     height: 40px;
 }
 
-.main-menu-icon {
-    margin: 10px;
-}
-
 .main-menu-element {
     background-color: var(--dark-accent2);
     padding: 10px;
